# lightrover_description

./: CMakeLists.txt  package.xml  readme.md
configuration_files/: lightrover_controller.yaml  show_model.rviz
launch/: display_on_rviz.launch  gazebo_control.launch  gazebo_empty_world.launch  gazebo_husky_playworld.launch  gazebo_sample2_world.launch  gazebo_sample_world.launch  gmapping.launch  lightrover_gmapping.launch  lightrover_joycon.launch  lightrover_mousectrl.launch  lightrover_move_base_dwa.launch  lightrover_view.launch.py
robots/: lightrover_urdf.xacro
rviz/: lightrover.rviz
urdf/: common.xacro
urdf/base/: base_urdf.xacro
urdf/lidar/: lidar_gazebo.xacro  lidar_urdf.xacro
urdf/wheel/: wheel_urdf.xacro
